# SpiPy

./: .gitignore  CLAUDE.md  PLAN.md  README.md  environment.yml  insilico-screening.md  pyproject.toml
spipy/: config.py  mol.py
tests/: conftest.py  test_mol.py
